--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 The Sky Is The Limit
             </h1>
             <p class="lead">
-                This project uses HTML and CSS3 with a little bit of JS (for Google Map). All elements are aligned using CSS Flexbox instead of Floats. Also, this site implenets responsive design; adapts to different screen sizes. Pure HTML and CSS (no frameworks were used).<a target='_blank' href="https://www.github.com/apekodonkorjewel">View source files</a>
+                This project uses HTML and CSS3 with a little bit of JS (for Google Map). All elements are aligned using CSS Flexbox instead of Floats. Also, this site implenets responsive design; adapts to different screen sizes. Pure HTML and CSS (no frameworks were used).<a target='_blank' class="github" href="https://www.github.com/apekodonkorjewel/webprojects"> View source files</a>
             </p>
             <a href="/hotel_website/index.html" target="_blank" class="btn">Open Hotel website</a>
         </div>
